# ts7553v2-utils

./: INSTALL  Makefile.am  configure.ac
c/: fpga.c  fpga.h  gpiolib.c  mx28adcctl.c  tshwctl.c  tsmicroctl.c
c/keypad-test/: Makefile  main.c
c/spi-lcd/: README.txt
c/spi-lcd/bounce-test/: Makefile
c/spi-lcd/cairo-test/: Makefile  lcd-display.c
c/spi-lcd/lcd-helper/: Makefile  spi-lcd.c
scripts/: emmc_reliability  prep_customer_image  prep_stock_image  tssilomon
sh/: tssilomon
src/: .gitignore  Makefile.am  gpiod-helper.c  gpiod-helper.h  gpiolib.c  tshwctl.c  tsmicroctl.c
src/keypad-test/: .gitignore  Makefile.am  main.c
src/spi-lcd/: README.txt
src/spi-lcd/bounce-test/: .gitignore  Makefile  Makefile.am  main.c
src/spi-lcd/cairo-test/: .gitignore  Makefile  Makefile.am  lcd-display.c  lcd-display.h  main.c
src/spi-lcd/lcd-helper/: .gitignore  Makefile  Makefile.am  spi-lcd.c
